Fixed debug output and made all executables single instance.
-debug out put now has a file for each instance. and outputs to the Logs folder in program data
-now executables will only have one instance.

--- a/Executables/OrbisModuleManager/OrbisModuleManager.csproj
+++ b/Executables/OrbisModuleManager/OrbisModuleManager.csproj
@@ -78,6 +78,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\NativeMethods.cs" />
     <Compile Include="Classes\Utilities.cs" />
     <Compile Include="OrbisModuleManager.cs">
       <SubType>Form</SubType>
