--- a/Executables/OrbisTargetSettings/OrbisTargetSettings.csproj
+++ b/Executables/OrbisTargetSettings/OrbisTargetSettings.csproj
@@ -75,6 +75,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NativeMethods.cs" />
     <Compile Include="OrbisTargetSettings.cs">
       <SubType>Form</SubType>
     </Compile>
