--- a/Libraries/OrbisLibCPP/OrbisLibCPP.vcxproj
+++ b/Libraries/OrbisLibCPP/OrbisLibCPP.vcxproj
@@ -120,7 +120,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;ORBISLIBCPP_EXPORTS;_WINDOWS;_USRDLL;MAKEDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;ORBISLIBCPP_EXPORTS;_WINDOWS;_USRDLL;MAKEDLL;_WINDLL</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>stdafx.hpp</PrecompiledHeaderFile>
     </ClCompile>
@@ -214,6 +214,7 @@ echo "$(PROGRAMDATA)\Orbis Suite\$(TargetName)$(TargetExt)"</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Export.hpp" />
+    <ClInclude Include="FileIO.hpp" />
     <ClInclude Include="OrbisAPI.hpp" />
     <ClInclude Include="OrbisDebugger.hpp" />
     <ClInclude Include="OrbisDef.hpp" />
@@ -242,6 +243,7 @@ echo "$(PROGRAMDATA)\Orbis Suite\$(TargetName)$(TargetExt)"</Command>
     <ClCompile Include="OrbisTargetManagement.cpp" />
     <ClCompile Include="SocketListener.cpp" />
     <ClCompile Include="Sockets.cpp" />
+    <ClCompile Include="FileIO.cpp" />
     <ClCompile Include="sqlite3.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
