--- a/Libraries/OrbisLibCPP/OrbisLibCPP.vcxproj.filters
+++ b/Libraries/OrbisLibCPP/OrbisLibCPP.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="OrbisSettings.hpp">
       <Filter>Header Files\OrbisLib</Filter>
     </ClInclude>
+    <ClInclude Include="FileIO.hpp">
+      <Filter>Header Files\Util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -124,6 +127,9 @@
     </ClCompile>
     <ClCompile Include="OrbisSettings.cpp">
       <Filter>Source Files\OrbisLib</Filter>
+    </ClCompile>
+    <ClCompile Include="FileIO.cpp">
+      <Filter>Source Files\Util</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
