Added atuo payload loader and Support for multiple instanced targets.
-Implemented an auto payload loader.
-Support for a different target per instance.
-SelectedTarget is now by default the the default target.

--- a/Libraries/OrbisLib/OrbisLib.csproj
+++ b/Libraries/OrbisLib/OrbisLib.csproj
@@ -169,6 +169,8 @@
     <Content Include="..\..\x64\Debug\OrbisLibCPP.dll">
       <Link>OrbisLibCPP.dll</Link>
     </Content>
+    <None Include="Resources\NotDefault.ico" />
+    <None Include="Resources\Default.ico" />
     <None Include="Resources\Process_Detached.png" />
     <None Include="Resources\Process_Attached.png" />
   </ItemGroup>
