--- a/Executables/OrbisConsoleOutput/OrbisConsoleOutput.csproj
+++ b/Executables/OrbisConsoleOutput/OrbisConsoleOutput.csproj
@@ -75,6 +75,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\OutputControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\OutputControl.Designer.cs">
+      <DependentUpon>OutputControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="OrbisConsoleOutput.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +89,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Controls\OutputControl.resx">
+      <DependentUpon>OutputControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="OrbisConsoleOutput.resx">
       <DependentUpon>OrbisConsoleOutput.cs</DependentUpon>
     </EmbeddedResource>
@@ -111,6 +120,7 @@
   <ItemGroup>
     <Content Include="OrbisConsoleOutput_100.ico" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>"C:\Program Files (x86)\Microsoft\ILMerge\ILMerge.exe" /wildcards /t:winexe /out:../../../../$(ProjectName).exe  $(ProjectName).exe *.dll /ndebug /targetplatform:"v4,C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1"</PostBuildEvent>
