Fixes to compile on new machine

--- a/Libraries/OrbisWindowsServiceLib/OrbisWindowsServiceLib.vcxproj
+++ b/Libraries/OrbisWindowsServiceLib/OrbisWindowsServiceLib.vcxproj
@@ -126,7 +126,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Gregory\Source\Repos\Orbis Suite\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>OrbisLibCPP.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
