--- a/Libraries/OrbisLibCPP/OrbisLibCPP.vcxproj.filters
+++ b/Libraries/OrbisLibCPP/OrbisLibCPP.vcxproj.filters
@@ -132,4 +132,7 @@
       <Filter>Source Files\Util</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
