--- a/Libraries/OrbisWindowsServiceLib/OrbisWindowsServiceLib.vcxproj.filters
+++ b/Libraries/OrbisWindowsServiceLib/OrbisWindowsServiceLib.vcxproj.filters
@@ -69,4 +69,7 @@
       <Filter>Source Files\Util</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
