--- a/Libraries/OrbisLib/OrbisLib.csproj
+++ b/Libraries/OrbisLib/OrbisLib.csproj
@@ -97,6 +97,7 @@
       <HintPath>..\..\packages\System.Json.4.7.1\lib\net461\System.Json.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -191,6 +192,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Dialog\About.resx">
       <DependentUpon>About.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialog\AddTarget.resx">
       <DependentUpon>AddTarget.cs</DependentUpon>
